--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".items.AboutFragment">
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".items.AboutFragment"
+android:columnCount="2"
+android:rowCount="5">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+<ImageView
+    android:layout_width="230dp"
+    android:layout_height="350dp"
+    android:layout_gravity="left"
+    android:layout_rowSpan="3"
+    android:layout_columnSpan="1"
+    android:id="@+id/avatar"/>
+<TextView
+    android:layout_gravity="left"
+    android:text="@string/full_name"
+    android:textAllCaps="true"
+    android:textSize="20sp"
+    android:textStyle="bold"
+    android:layout_rowSpan="3"/>
+<TextView
+    android:layout_gravity="center_horizontal"
+    android:text="@string/about_text"
+    android:textSize="25sp"
+    android:layout_columnSpan="2"
+    android:layout_rowSpan="2"/>
+</GridLayout>
