--- a/app/src/main/res/layout/fragment_study.xml
+++ b/app/src/main/res/layout/fragment_study.xml
@@ -7,8 +7,8 @@
     app:layoutDescription="@xml/motion_scene"
     android:layout_gravity="center"
     app:layout_anchorGravity="center"
+    android:background="#A0CCCCCC"
     tools:context=".items.StudyFragment">
-
     <ImageView
         android:scaleType="fitCenter"
         android:id="@+id/inst_image"
@@ -20,21 +20,37 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <TextView
+        android:id="@+id/label"
+        android:text="@string/urfu"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <LinearLayout
+
+        android:background="@drawable/background"
         android:orientation="vertical"
         android:id="@+id/study_text"
         android:layout_width="64dp"
         android:layout_height="match_parent"
         android:text="Button" >
         <TextView
+            android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="Text"
-            android:textSize="18sp"/>
+            android:text="Подробнее"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textSize="20sp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:text="More text"
+            android:text="Институт (факультет): Институт радиоэлектроники и информационных технолоий ИРИТ-РТФ\nНаправление: 09.03.02 Информационные системы и технологии в приборостроении и телекоммуникациях"
             android:textSize="18sp"/>
     </LinearLayout>
 
