recyclerview first version

--- a/app/src/main/res/layout-land/fragment_about.xml
+++ b/app/src/main/res/layout-land/fragment_about.xml
@@ -8,6 +8,7 @@
     tools:context=".items.AboutFragment"
     android:columnCount="2"
     android:gravity="center"
+    android:background="@drawable/background"
     android:rowCount="5">
 
     <ImageView
