--- a/app/src/main/res/layout/fragment_interests.xml
+++ b/app/src/main/res/layout/fragment_interests.xml
@@ -27,4 +27,128 @@
         app:layoutManager="LinearLayoutManager"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:text="@string/languages"/>
+
+    <HorizontalScrollView
+        android:scrollbars="none"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content">
+            <androidx.cardview.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/csharp"
+                android:layout_width="100dp"
+                android:layout_margin="15dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:onClick ="onCardClicked"
+                card_view:cardBackgroundColor="#818"
+                card_view:cardCornerRadius="14dp">
+
+                <TextView
+                    android:gravity="center"
+                    android:textColor="#000"
+                    android:textAlignment="center"
+                    android:text="@string/ccharp"
+                    android:textStyle="bold"
+                    android:textSize="33sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+
+                android:onClick ="onCardClicked"
+                android:id="@+id/java"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="100dp"
+                android:layout_margin="15dp"
+                android:layout_height="100dp"
+                card_view:cardBackgroundColor="#ff7A05"
+                card_view:cardCornerRadius="14dp">
+
+                <TextView
+                    android:gravity="center"
+                    android:textColor="#000"
+                    android:textAlignment="center"
+                    android:text="@string/java"
+                    android:textStyle="bold"
+                    android:textSize="33sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+
+                android:onClick ="onCardClicked"
+                android:id="@+id/js"
+                android:layout_width="100dp"
+                android:layout_margin="15dp"
+                android:layout_height="100dp"
+                app:cardBackgroundColor="#fde910"
+                app:cardCornerRadius="14dp">
+
+                <TextView
+                    android:gravity="center"
+                    android:textAlignment="center"
+                    android:text="@string/js"
+                    android:textColor="#000"
+                    android:textStyle="bold"
+                    android:textSize="33sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+
+                android:onClick ="onCardClicked"
+                android:id="@+id/c"
+                android:layout_width="100dp"
+                android:layout_margin="15dp"
+                android:layout_height="100dp"
+                card_view:cardBackgroundColor="#10FF10"
+                card_view:cardCornerRadius="14dp">
+
+                <TextView
+                    android:gravity="center"
+                    android:textAlignment="center"
+                    android:text="@string/c"
+                    android:textColor="#000"
+                    android:textStyle="bold"
+                    android:textSize="33sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="100dp"
+                android:layout_margin="15dp"
+
+                android:onClick ="onCardClicked"
+                android:id="@+id/sql"
+                android:layout_height="100dp"
+                card_view:cardBackgroundColor="#2A2ACC"
+                card_view:cardCornerRadius="14dp">
+                <TextView
+                    android:gravity="center"
+                    android:textAlignment="center"
+                    android:text="@string/sql"
+                    android:textColor="#000"
+                    android:textStyle="bold"
+                    android:textSize="33sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </HorizontalScrollView>
 </LinearLayout>
