--- a/app/src/main/res/layout-land/fragment_about.xml
+++ b/app/src/main/res/layout-land/fragment_about.xml
@@ -21,7 +21,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center|center_vertical"
         android:gravity="center"
-        android:text="@string/full_name"
+        android:text="@string/about_label"
         android:textAllCaps="true"
         android:textSize="25sp"
         android:textStyle="bold" />
