--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#800A0ACC</color>
+    <color name="colorPrimaryDark">#DD00005B</color>
+    <color name="colorAccent">#0000FF</color>
     <color name="black">#000</color>
 </resources>
