--- a/app/src/main/res/layout/fragment_study.xml
+++ b/app/src/main/res/layout/fragment_study.xml
@@ -46,6 +46,7 @@
             android:textAlignment="center"
             android:textSize="20sp"/>
         <TextView
+            android:layout_margin="10dp"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:text="@string/study_text"
